--- a/week3/project2/project_2.ipynb
+++ b/week3/project2/project_2.ipynb
@@ -2,9 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the (quadratic | cubic | quartic) roots calculator\n",
+      "What type of equation would you like to find roots for?\n",
+      "1. Quadratic\n",
+      "2. Cubic\n",
+      "3. Quartic\n",
+      "\n",
+      "--- This calculator only checks for whole number roots between -100 and 100---\n",
+      "\n",
+      "Whole number roots:\n",
+      "1\n",
+      "10\n",
+      "12\n"
+     ]
+    }
+   ],
    "source": [
     "from math import sqrt\n",
     "\n",
@@ -55,7 +74,7 @@
     "        print(\"None\")\n",
     "    \n",
     "elif choice == '3':\n",
-    "    print(\"\\n--- This calculator only checks for whole number roots between -100 and 100---\")\n",
+    "    print(\"\\n--- This calculator only checks for whole number roots between -100 and 100 ---\")\n",
     "    \n",
     "    a = int(input(\"Enter the coefficient of x^4: \"))\n",
     "    b = int(input(\"Enter the coefficient of x^3: \"))\n",
