--- a/week10/Week 10 - Inheritance and Polymorphism Practice.ipynb
+++ b/week10/Week 10 - Inheritance and Polymorphism Practice.ipynb
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,8 +734,10 @@
     "            choice = Retail()\n",
     "        elif emp_division == 'Global Banking':\n",
     "            choice = Global()\n",
-    "        else:\n",
+    "        elif emp_division == 'Commercial Banking':\n",
     "            choice = Commercial()\n",
+    "        else:\n",
+    "            choice = Zenith()\n",
     "        \n",
     "        prompt = f\"Welcome {emp_name.title()}, here are the services of the {emp_division} division:\\n\"\n",
     "        \n",
