--- a/week12/Python Abstraction.ipynb
+++ b/week12/Python Abstraction.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -208,10 +208,11 @@
     }
    ],
    "source": [
-    "from abc import ABC\n",
+    "from abc import ABC, abstractmethod\n",
     "\n",
     "class geometric(ABC):\n",
     "    \n",
+    "    @abstractmethod\n",
     "    def volume(self):\n",
     "        #abstract method\n",
     "        pass\n",
